머신러닝을 이용한 데이터 분석
머신러닝을 이용한 데이터 분석

--- a/2장. 회귀분석 - 6절. 정규화 선형회귀.ipynb
+++ b/2장. 회귀분석 - 6절. 정규화 선형회귀.ipynb
@@ -135,6 +135,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# statsmodels의 정규화 선형회귀 모형"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
